src/objects/Change_Control_and_Bug_Tracking__c.object
<CustomObject>
    <description>To record all problems and comments on the application</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Eric Gronholz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kevin Johnson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lyudmila Zykova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt Britton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Millan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quinn Cushing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samantha Koller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shana McMahan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BT_Code__c</fullName>
        <description>Short code for referencing in related documents</description>
        <displayFormat>prod.a.BT-{0000}</displayFormat>
        <label>BT Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract_Splits__c</fullName>
        <description>percentage of work on which project when multiple projects paying for it.</description>
        <label>Contract Splits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DCS_Contract__c</fullName>
        <description>Pick which contract work should be billed to</description>
        <inlineHelpText>If more than one project selected, specify % in Contract Splits field.</inlineHelpText>
        <label>DCS Contract</label>
        <picklist>
            <picklistValues>
                <fullName>CEP Phase II Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEP Phase II Support &amp; Mods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEP Specific Change Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRP/Criminal Courts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youth Programs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Date_Bug_Reported__c</fullName>
        <label>Date Bug Reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developers_Comments__c</fullName>
        <label>Developers Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_date__c</fullName>
        <description>Estimated start date of implementation of the bug/enhancement</description>
        <inlineHelpText>Estimated start date of implementation of the bug/enhancement</inlineHelpText>
        <label>Estimated Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_completion_date__c</fullName>
        <description>Estimated completion date of implementation of the bug/enhancement</description>
        <inlineHelpText>Estimated completion date of implementation of the bug/enhancement</inlineHelpText>
        <label>Estimated completion date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_hours__c</fullName>
        <description>Estimated hrs to complete the fix of a bug or implement an enhancement</description>
        <inlineHelpText>Estimated hrs to complete the fix of a bug or implement an enhancement</inlineHelpText>
        <label>Estimated hours</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Follow up assignment to user (e.g. Bryan Toft for testing, Gamal Willis for review)</description>
        <inlineHelpText>Once item is addressed, who needs to follow up on it? May be IS, SPA, or Program staff.</inlineHelpText>
        <label>Follow Up By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Control_Bug_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_up_Comments__c</fullName>
        <description>Back and forth comments about the bug/CR</description>
        <inlineHelpText>Please initial and date-stamp your comments</inlineHelpText>
        <label>Follow-up Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Date__c</fullName>
        <inlineHelpText>Date work is implemented in production.</inlineHelpText>
        <label>Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Modification_Type__c</fullName>
        <description>Multi-picklist to categorize what types of modifications to the system are being done</description>
        <inlineHelpText>Please select the appropriate types of changes needed. Put details in Description. Be sure to email both the Npower and the CASES Database team when implementation date is known and again when implementation is in production.</inlineHelpText>
        <label>Modification Type</label>
        <picklist>
            <picklistValues>
                <fullName>APEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist Values</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VisualForce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>New_Note__c</fullName>
        <description>Passes note value to a new note object attached to the bug, and then clears the field.</description>
        <label>New Note</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People - All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People - Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People - Attorneys/ Law Guardians</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People - Judges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People - Probation Officers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orientation Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rearrest Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detained Dates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penal Codes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assesments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Do</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Original_BTCode__c</fullName>
        <description>For tracking BT Codes across sandboxes as they are refreshed and data lost.</description>
        <label>Original BTCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>P1 - ASAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2 - Important</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3 - Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4 - Wishlist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Problem_Type__c</fullName>
        <label>Problem Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bug</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Change Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Specification Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data/ QA Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Categorize changes &amp; bugs by project.</description>
        <inlineHelpText>Use &quot;All&quot; if affects more than one project, or is not easily categorized.</inlineHelpText>
        <label>Project</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CJC/JS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QJC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>START</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Push_to_Production__c</fullName>
        <description>What needs to be pushed to production in order for this bug to be resolved</description>
        <inlineHelpText>What needs to be pushed to production in order for this bug to be resolved</inlineHelpText>
        <label>Push to Production</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Cannot Replicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functionality Already Exists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Interest/ No Longer Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Technical Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Not Fix</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Screen_Shots__c</fullName>
        <label>Screen Shots</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Email is sent if this box is checked (gets re-checked every time by workflow) and if there is a value in Last Change Summary (e.g. an important field was modified or a note was added)</description>
        <label>Send Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Push/Deploy to Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testing_Area__c</fullName>
        <description>Area of project being tested during which bug/change was found</description>
        <label>Testing Area</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Actions - Exit Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Actions - Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Actions - Re-instatement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Actions - Re-intake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Exploration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact and Related List Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detained Dates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event/To Do Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events/Appointments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events/Appointments - Court Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events/Appointments - Orientation Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tests</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Watchers__c</fullName>
        <inlineHelpText>Include anyone who should receive emails about this change control/bug.</inlineHelpText>
        <label>Watchers</label>
        <picklist>
            <picklistValues>
                <fullName>Eric Gronholz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kevin Johnson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lyudmila Zykova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt Britton</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Millan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quinn Cushing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samantha Koller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shana McMahan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stephen Chen</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Bug Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>BT_Code__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Bug_Reported__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>History</label>
    </listViews>
    <listViews>
        <fullName>Push_to_production</fullName>
        <columns>BT_Code__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Bug_Reported__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Push/Deploy to Production</value>
        </filters>
        <label>Push to production</label>
    </listViews>
    <listViews>
        <fullName>notcompleted</fullName>
        <columns>BT_Code__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Bug_Reported__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not started,In progress,Testing</value>
        </filters>
        <label>Get to work- incomplete and not started</label>
    </listViews>
    <nameField>
        <label>Change and Bug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bug Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>